--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.1",
     "mongodb": "^3.1.10",
+    "nedb": "^1.8.0",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
